--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ code {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: #f7ede2;
+  background-color: #caf0f8;
+  color: #03045e;
   height: 100vh;
   width: 100vw;
 }
@@ -52,15 +53,15 @@ button {
   font-size: 1.2rem;
   border-radius: 6px;
   border: none;
-  background-color: #4d908e;
+  background-color: #560bad;
   color: #f7ede2;
   transition: 0.3s all;
 }
 
 button:hover {
   cursor: pointer;
-  background-color: #90be6d;
-  color: black;
+  background-color: #4361ee;
+  color: #caf0f8;
   transform: scale(0.96);
 }
 
